#151 fix for transparent dropdown on mobile.

--- a/public/stylesheets/nav/landingNav.css
+++ b/public/stylesheets/nav/landingNav.css
@@ -41,5 +41,4 @@
 
 .partnerBox {
     border: 1px solid white;
-    margin-right: 50px;
 }
