--- a/public/stylesheets/partner.css
+++ b/public/stylesheets/partner.css
@@ -92,5 +92,4 @@
 
 .partnerBox {
     border: 1px solid black;
-    margin-right: 50px;
 }
